# ESVO

./: README.md  dependencies.yaml
esvo_core/: CMakeLists.txt  esvo_mvstereo.perspective  esvo_mvstereo.rviz  esvo_system.perspective  esvo_system.rviz  esvo_system_DSEC.perspective  esvo_system_DSEC.rviz  package.xml
esvo_core/calib/dsec/zurich_city_04_a/: left.yaml  right.yaml
esvo_core/calib/hkust/: left.yaml  right.yaml
esvo_core/calib/rpg/: left.yaml  right.yaml
esvo_core/calib/upenn/: left.yaml  right.yaml
esvo_core/cfg/: DVS_MappingStereo.cfg
esvo_core/cfg/mapping/: mapping_dsec.yaml  mapping_hkust.yaml  mapping_rpg.yaml  mapping_upenn.yaml
esvo_core/cfg/mvstereo/: mvstereo_rpg.yaml  mvstereo_upenn.yaml
esvo_core/cfg/tracking/: tracking_dsec.yaml  tracking_hkust.yaml  tracking_rpg.yaml  tracking_upenn.yaml
esvo_core/include/esvo_core/: esvo_MVStereo.h  esvo_Mapping.h  esvo_Tracking.h
esvo_core/include/esvo_core/container/: CameraSystem.h  DepthMap.h  DepthPoint.h  EventMatchPair.h  ResidualItem.h  SmartGrid.h  TimeSurfaceObservation.h
esvo_core/include/esvo_core/core/: DepthFusion.h  DepthProblem.h  DepthProblemSolver.h  DepthRegularization.h  EventBM.h  EventMatcher.h  RegProblemLM.h  RegProblemSolverLM.h
esvo_core/include/esvo_core/optimization/: OptimizationFunctor.h
esvo_core/include/esvo_core/tools/: TicToc.h  Visualization.h  cayley.h  params_helper.h  sobel.h  utils.h
esvo_core/launch/mvstereo/: mvstereo_rpg.launch  mvstereo_upenn.launch
esvo_core/launch/system/: system_hkust.launch  system_rpg.launch  system_upenn.launch
esvo_core/launch/system/DSEC/: system_zurich_city_04_a.launch
esvo_core/src/: esvo_MVStereo.cpp  esvo_MVStereoNode.cpp  esvo_Mapping.cpp  esvo_MappingNode.cpp  esvo_Tracking.cpp  esvo_TrackingNode.cpp
esvo_core/src/container/: CameraSystem.cpp  DepthPoint.cpp  EventPoint.cpp  ResidualItem.cpp
esvo_core/src/core/: DepthFusion.cpp  DepthProblem.cpp  DepthProblemSolver.cpp  DepthRegularization.cpp  EventBM.cpp  EventMatcher.cpp  RegProblemLM.cpp  RegProblemSolverLM.cpp
esvo_core/src/tools/: Visualization.cpp  cayley.cpp  sobel.cpp
esvo_time_surface/: CMakeLists.txt  esvo_time_surface.perspective  package.xml
esvo_time_surface/cfg/: parameters.yaml
esvo_time_surface/include/esvo_time_surface/: TicToc.h  TimeSurface.h
esvo_time_surface/launch/: stereo_time_surface.launch
esvo_time_surface/launch/rosbag_launcher/dsec/zurich_city_04_a/: calib_info.launch  zurich_city_04_a.launch
esvo_time_surface/launch/rosbag_launcher/hkust/: hkust_calib_info.launch  hkust_lab.launch
esvo_time_surface/launch/rosbag_launcher/rpg/: rpg_bin.launch  rpg_boxes.launch  rpg_calib_info.launch  rpg_desk.launch  rpg_monitor.launch
esvo_time_surface/launch/rosbag_launcher/upenn/: upenn_indoor_flying1.launch  upenn_indoor_flying3.launch
esvo_time_surface/src/: TimeSurface.cpp  TimeSurface_node.cpp
events_repacking_helper/: CMakeLists.txt  README.md  package.xml
events_repacking_helper/launch/: repacking.launch
events_repacking_helper/src/: EventMessageEditor.cpp
stereo_rig_design/: Stereo_Rig_Base.step  camMount.SLDPRT
